<resources>
    <string name="app_name">+Palabras</string>
    <string name="icon">Ícono</string>
    <string name="words_spanish">Palabras</string>
    <string name="no_words_spanish">Sin Palabras</string>
    <string name="quotes">Citas</string>
    <string name="no_quotes">Sin citas</string>
    <string name="author">Autor</string>
    <string name="words_english">Words</string>
    <string name="no_words_english">No words</string>
    <string name="word_spanish">Palabra</string>
    <string name="quote">Cita</string>
    <string name="word_english">Word</string>
    <string name="meaning">Significado</string>
    <string name="translation">Traducción</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="search">Buscar…</string>
    <string name="reports">Reportes</string>
    <string name="contact">Contacto</string>
    <string name="exit">Salir</string>
    <string name="whatsApp">+56941063216</string>
    <string name="gmail">marsanchezs@gmail.com</string>
    <string name="linkedin">https://linkedin.com/in/mario-sánchez-954b01a9</string>
    <string name="github">https://github.com/marsanchezs/</string>
    <string name="type">Tipo</string>
    <string name="general">General</string>
    <string name="by_date">Por fecha</string>
    <string name="from">Desde</string>
    <string name="to">Hasta</string>
    <string name="date">00–00–0000</string>
    <string name="select">Seleccionar…</string>
    <string name="the_word">La palabra</string>
    <string name="it_is_already_added">ya se encuentra agregada</string>
    <string name="has_been_added">ha sido agregada</string>
    <string name="has_been_updated">ha sido actualizada</string>
    <string name="has_been_removed">ha sido eliminada</string>
    <string name="could_not_add_the_word">No se ha podido agregar la palabra</string>
    <string name="could_not_update_the_word">No se ha podido actualizar la palabra</string>
    <string name="could_not_delete_the_word">No se ha podido eliminar la palabra</string>
    <string name="safe_to_delete_the_word">¿Seguro de eliminar la palabra</string>
    <string name="enter_a_word_and_its_meaning">Ingresar una palabra y su significado</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_visor_pdf">VisorPDF</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_a_quote_and_its_author">Ingresar una cita y su autor</string>
    <string name="enter_an_word_or_phrase_in_english_and_its_meaning">Ingresar una palabra en inglés y su significado</string>
    <string name="enter_a_word">Ingresar una palabra</string>
    <string name="enter_a_quote">Ingresar una cita</string>
    <string name="enter_a_word_or_phrase_in_english">Ingresar una palabra en inglés</string>
    <string name="enter_word_meaning">Ingresar significado de la palabra</string>
    <string name="enter_an_author">Ingresar un autor</string>
    <string name="enter_translation_of_the_word_or_phrase">Ingresar traducción de la palabra</string>
</resources>