<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space style="@style/espacio" />

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/iv"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/ic_words_spanish"
                android:contentDescription="@string/icon" />

            <Space style="@style/espacioVertical" />

            <TextView
                style="@style/texto"
                android:id="@+id/tvTitle"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="25sp"/>
        </TableRow>

        <Space style="@style/espacio" />

        <View
            android:id="@+id/line"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/colorLetra" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llvWordSpanish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:padding="3dp">

                    <EditText
                        android:id="@+id/edtWordSpanish"
                        style="@style/texto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/word_spanish"
                        android:imeOptions="actionNext"
                        android:inputType="textMultiLine"
                        android:textSize="14sp" />

                </FrameLayout>

                <Space style="@style/espacio" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:padding="3dp">

                    <EditText
                        android:id="@+id/edtMeaning"
                        style="@style/texto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/meaning"
                        android:imeOptions="actionNext"
                        android:inputType="textMultiLine"
                        android:textSize="14sp" />

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llvQuote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:padding="3dp">

                    <EditText
                        android:id="@+id/edtQuote"
                        style="@style/texto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/quote"
                        android:imeOptions="actionNext"
                        android:inputType="textMultiLine"
                        android:textSize="14sp" />

                </FrameLayout>

                <Space style="@style/espacio" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:padding="3dp">

                    <AutoCompleteTextView
                        android:id="@+id/edtAuthor"
                        style="@style/texto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/author"
                        android:imeOptions="actionNext"
                        android:inputType="textMultiLine"
                        android:textSize="14sp" />

                    <ImageButton
                        android:id="@+id/btnAddAuthor"
                        style="@style/botonEditText"
                        android:layout_gravity="center_vertical|end"
                        android:background="@drawable/button_shape"
                        app:srcCompat="@drawable/add" />

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llvWordEnglish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:padding="3dp">

                    <EditText
                        android:id="@+id/edtWordEnglish"
                        style="@style/texto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/word_english"
                        android:imeOptions="actionNext"
                        android:inputType="textMultiLine"
                        android:textSize="14sp" />

                </FrameLayout>

                <Space style="@style/espacio" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:padding="3dp">

                    <EditText
                        android:id="@+id/edtTranslation"
                        style="@style/texto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/translation"
                        android:imeOptions="actionNext"
                        android:inputType="textMultiLine"
                        android:textSize="14sp" />

                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageButton
                style="@style/botonVentana"
                android:id="@+id/btnAccept"
                app:srcCompat="@drawable/ic_accept"
                android:contentDescription="@string/icon" />

            <ImageButton
                style="@style/botonVentana"
                android:id="@+id/btnCancel"
                app:srcCompat="@drawable/ic_cancel"
                android:contentDescription="@string/icon" />
        </TableRow>

        <Space style="@style/espacio" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>