<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.FragmentWordsEnglish">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/llvFW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgNoWordsEnglish"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/delete"
            android:contentDescription="@string/icon" />

        <TextView
            android:id="@+id/txtFW"
            style="@style/texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_words_english" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clFW"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/llvFW2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_2"
                android:layout_margin="5dp"
                android:padding="5dp"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/iv_search"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:contentDescription="@string/icon"
                    app:srcCompat="@drawable/buscar" />

                <AutoCompleteTextView
                    android:id="@+id/actv_search"
                    style="@style/texto"
                    android:textSize="14sp"
                    android:completionThreshold="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/search"
                    android:inputType="textPersonName"
                    app:backgroundTint="@color/colorLetra"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/border_2">

                <TextView
                    android:id="@+id/tvWord"
                    style="@style/texto"
                    android:textSize="14sp"
                    android:padding="10dp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/word_english" />

                <View
                    android:id="@+id/line"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorLetra" />

                <TextView
                    android:id="@+id/tvTranslation"
                    style="@style/texto"
                    android:textSize="14sp"
                    android:padding="10dp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/translation" />

            </TableRow>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvWordsEnglish"
                android:background="@drawable/border_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@color/colorLetra"
                android:dividerHeight="1dp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/btnAddWordEnglish"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_shape"
            android:contentDescription="@string/icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/add" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
